--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "promisify": "0.0.3",
     "randomstring": "^1.1.5",
     "stream": "0.0.2",
+    "util": "^0.12.3",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.7",
     "validator": "^13.6.0"
