--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "path": "^0.12.7",
     "promisify": "0.0.3",
     "randomstring": "^1.1.5",
+    "request": "^2.88.2",
+    "request-context": "^2.0.0",
     "stream": "0.0.2",
     "util": "^0.12.3",
     "uuid": "^8.3.2",
